--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,11 @@
   border: 1px solid transparent;
 }
 
+img {
+  max-width: 100%;
+  /* vertical-align: middle; */
+}
+
 body {
   /* padding: 0; */
   font-family: "Mouse Memoirs", sans-serif;
