--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 main {
-    padding: 0 2rem;
+    padding: 1rem 2rem;
     margin:  0 auto;
     display: flex;
     flex-direction: column;
@@ -13,6 +13,6 @@ main {
 }
 @media (max-width: 768px) {
     main {
-        padding: 0 0.5rem;
+        padding: 1rem 0.5rem;
     }
 }
