--- a/src/index.css
+++ b/src/index.css
@@ -36,22 +36,19 @@ img {
 }
 
 body {
-  /* padding: 0; */
   font-family: "Mouse Memoirs", sans-serif;
   background: url(./assets/background-desktop.svg) no-repeat;
-  /* background-size: 100vh; */
-  /* min-height: 100vh; */
+  background-size: cover;
 }
 @media (max-width: 760px) {
   body {
     background: url(./assets/background-tablet.svg) no-repeat;
-    background-size: 100vh;
+    background-size: cover;
   }
 }
 @media (max-width: 375px) {
   body {
     background: url(./assets/background-mobile.svg) no-repeat;
-    /* background-size: 100vh; */
-    /* background-size: 100% 100%; */
+    background-size: cover;
   }
 }
